# http-vfs-fileserver

./: .gitmodules  CMakeLists.txt  README.md  config.json
sources/: main.cc
sources/auth/: auth_manager.cpp  auth_manager.hpp
sources/config/: configurator.cpp  configurator.hpp
sources/server/: server.cpp  server.hpp
sources/utility/: utility.hpp
sources/vfs/: file.hpp  filesystem_vfs.hpp  ivfs.hpp  vfs_manager.cpp  vfs_manager.hpp
web-ui/: app.vue  nuxt.config.ts  package-lock.json  package.json
web-ui/pages/[vfs]/: [...path].vue
